--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<!--<div class="container">-->
+<div class="container">
     <div class="row">
         <div class="col s12">
             <div class="navbar-fixed">
@@ -44,24 +44,46 @@
 
                 <div class="row">
                     <form class="col s12">
+
                         <div class="row">
+
                             <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email" data-error="wrong" data-success="right">Email</label>
+                                <input id="longitudeVal" type="text" class="validate">
+                                <label for="longitudeVal">Longitude</label>
                             </div>
+                            <div class="input-field col s12">
+                                <input id="latitudeVal" type="text" class="validate">
+                                <label for="latitudeVal">Latitude</label>
+                            </div>
+                            <div class="input-field col s12">
+                                <input id="areaName" type="text" class="validate">
+                                <label for="areaName">Area</label>
+                            </div>
+
+                            <div class="input-field col s6">
+                                <select id="selected-type">
+                                    <option value="1">ATM</option>
+                                    <option value="2">Office</option>
+                                </select>
+                                <label>Type</label>
+                            </div>
+
+                            <div class="input-field col s6">
+                                <select id="selected-bank">
+                                    <option value="1">Ecobank</option>
+                                    <option value="2">Beige</option>
+                                </select>
+                                <label>Bank</label>
+                            </div>
+
                         </div>
                     </form>
                 </div>
 
                 <div class="row">
-                    <form class="col s12">
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email" data-error="wrong" data-success="right">Email</label>
-                            </div>
-                        </div>
-                    </form>
+                    <div class="input-field col s12">
+                        <a id="addLocation_btn" class="waves-effect waves-light btn">Add Location</a>
+                    </div>
                 </div>
 
             </div>
@@ -74,7 +96,7 @@
         </div>
 
     </div>
-<!--</div>-->
+</div>
 
 <!-- jQuery -->
 <script type="text/javascript" src="assets/js/jquery.js"></script>
