View working and the user can open the location in a map

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="col s12">
                 <ul class="tabs">
-                    <li class="tab col s3"><a class="active" href="#addLocation">Add</a></li>
+                    <li class="tab col s3 addLocation"><a class="active" href="#addLocation">Add</a></li>
                     <li class="tab col s3 viewLocation"><a href="#viewLocation">View</a></li>
                 </ul>
             </div>
