Added the logo to the views

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="col s12">
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper">
+            <div style="background: #f15a24" class="nav-wrapper">
                 <a href="#!" class="brand-logo">MyBank</a>
             </div>
         </nav>
@@ -32,8 +32,8 @@
     <div class="row">
 
             <div class="col s12">
-                <ul class="tabs">
-                    <li class="tab col s3 addLocation"><a class="active" href="#addLocation">Add</a></li>
+                <ul  class="tabs">
+                    <li style="color: #f15a24" class="tab col s3 addLocation"><a class="active" href="#addLocation">Add</a></li>
                     <li class="tab col s3 viewLocation"><a href="#viewLocation">View</a></li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
 
                 <div class="row">
                     <div class="input-field col s12">
-                        <a id="addLocation_btn" class="waves-effect waves-light btn">Add Location</a>
+                        <a id="addLocation_btn" style="background: #f15a24;" class="waves-effect waves-light btn col s12">Add Location</a>
                     </div>
                 </div>
 
